--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,10 @@
         </activity>
         <activity android:name=".ui.CubeActivity">
         </activity>
+        <activity android:name=".ui.ConeActivity">
+        </activity>
+        <activity android:name=".ui.ImageActivity">
+        </activity>
     </application>
 
 </manifest>
