--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -53,6 +53,8 @@
         </activity>
         <activity android:name=".ui.ImageActivity">
         </activity>
+        <activity android:name=".ui.FilterImageActivity">
+        </activity>
     </application>
 
 </manifest>
