--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,6 +55,8 @@
         </activity>
         <activity android:name=".ui.FilterImageActivity">
         </activity>
+        <activity android:name=".camera.CameraActivity">
+        </activity>
     </application>
 
 </manifest>
