--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -57,6 +57,8 @@
         </activity>
         <activity android:name=".camera.CameraActivity">
         </activity>
+        <activity android:name=".ui.FBOActivity">
+        </activity>
     </application>
 
 </manifest>
