--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.maiml.openglesdemo">
+    package="com.maiml.openglesdemo">
 
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.CAMERA"/>
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.CAMERA" />
 
-    <uses-feature android:name="android.hardware.camera"/>
-    <uses-feature android:name="android.hardware.camera.autofocus"/>
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
 
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.RECORD_VIDEO"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
-    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-    <uses-permission android:name="android.permission.READ_PHONE_STATE"/>
-    <uses-permission android:name="android.permission.READ_LOGS"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.RECORD_VIDEO" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+    <uses-permission android:name="android.permission.READ_PHONE_STATE" />
+    <uses-permission android:name="android.permission.READ_LOGS" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_LOCATION_EXTRA_COMMANDS" />
 
     <!-- 3.0的版本为0x00030000,3.1的版本为0x00030001。 -->
     <!-- Tell the system this app requires OpenGL ES 2.0. -->
     <uses-feature
         android:glEsVersion="0x00020000"
-        android:required="true"/>
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -34,27 +34,27 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.ShapeActivity"/>
-        <activity android:name=".ui.TrangleActivity"/>
-        <activity android:name=".ui.SquareActivity"/>
-        <activity android:name=".ui.CircleActivity"/>
-        <activity android:name=".ui.CubeActivity"/>
-        <activity android:name=".ui.ConeActivity"/>
-        <activity android:name=".ui.ImageActivity"/>
-        <activity android:name=".ui.FilterImageActivity"/>
-        <activity android:name=".camera.CameraActivity"/>
-        <activity android:name=".ui.FBOActivity"/>
-        <activity android:name=".ui.EGLBackActivity"/>
-        <activity android:name=".ui.AudioRecordActivity"/>
-        <activity android:name=".ui.AudioRecordActivity2"/>
-        <activity android:name=".ui.AudioRecordActivity3"/>
-        <activity android:name=".ui.VideoEncoderActivity">
-        </activity>
+        <activity android:name=".ui.ShapeActivity" />
+        <activity android:name=".ui.TrangleActivity" />
+        <activity android:name=".ui.SquareActivity" />
+        <activity android:name=".ui.CircleActivity" />
+        <activity android:name=".ui.CubeActivity" />
+        <activity android:name=".ui.ConeActivity" />
+        <activity android:name=".ui.ImageActivity" />
+        <activity android:name=".ui.FilterImageActivity" />
+        <activity android:name=".camera.CameraActivity" />
+        <activity android:name=".ui.FBOActivity" />
+        <activity android:name=".ui.EGLBackActivity" />
+        <activity android:name=".ui.AudioRecordActivity" />
+        <activity android:name=".ui.AudioRecordActivity2" />
+        <activity android:name=".ui.AudioRecordActivity3" />
+        <activity android:name=".ui.VideoEncoderActivity"></activity>
+        <activity android:name=".ui.OpenGlPlayVideoActivity"></activity>
     </application>
 
 </manifest>
